# vllm

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.arm  Dockerfile.cpu  Dockerfile.hpu.ubi  Dockerfile.neuron  Dockerfile.openvino  Dockerfile.ppc64le  Dockerfile.ppc64le.ubi  Dockerfile.rocm  Dockerfile.rocm.ubi  Dockerfile.rocm_base  Dockerfile.s390x  Dockerfile.s390x.ubi  Dockerfile.tpu  Dockerfile.ubi  Dockerfile.ubi.cpu.ppc64le  Dockerfile.xpu  OWNERS  pyproject.toml  requirements-build.txt  requirements-common.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-hpu.txt  requirements-openvino.txt  requirements-rocm.txt  requirements-test.txt  requirements-tpu.txt  requirements-xpu.txt  setup.py
.buildkite/: test-pipeline.yaml
.github/data/: nm_benchmark_base_config_list.txt
.github/lm-eval-configs/: full-large-models.txt  full-small-models.txt
.github/scripts/: nm-run-lm-eval-vllm.sh  run-tests
.github/workflows/: build.yml  nm-benchmark.yml  nm-build-test.yml  nm-build.yml  nm-lm-eval.yml  nm-nightly.yml  nm-release.yml  nm-remote-push.yml  nm-test.yml  nm-upload-assets-to-gcp.yml  nm-upload-assets.yml  nm-weekly.yml  publish-docker.yml  pypi.yaml
.tekton/: cuda-pull-request.yaml  cuda-push.yaml  rocm-pull-request.yaml  rocm-push.yaml  vllm-cuda-odh-poc-pull-request.yaml  vllm-cuda-odh-poc-push.yaml  vllm-pull-request.yaml  vllm-push.yaml  vllm-rocm-odh-poc-pull-request.yaml  vllm-rocm-odh-poc-push.yaml
csrc/cpu/: attention.cpp
docs/: requirements-docs.txt
docs/source/: index.rst
examples/: offline_profile.py
neuralmagic/benchmarks/: run_benchmark_serving.py
neuralmagic/lm-eval/: full-small-models.yaml  smoke-small-models.yaml
requirements/: common.txt  cuda.txt  rocm.txt  test.txt
tests/: conftest.py  test_config.py  test_embedded_commit.py  test_regression.py
tests/accuracy/: test_lm_eval_correctness.py
tests/async_engine/: test_async_llm_engine.py  test_openapi_server_ray.py
tests/basic_correctness/: test_basic_correctness.py  test_chunked_prefill.py  test_preemption.py
tests/core/: test_chunked_prefill_scheduler.py  test_scheduler.py
tests/distributed/: test_basic_distributed_correctness.py  test_chunked_prefill_distributed.py  test_comm_ops.py  test_custom_all_reduce.py  test_multimodal_broadcast.py  test_parallel_state.py  test_pipeline_parallel.py  test_pynccl.py  test_shm_broadcast.py  test_utils.py
tests/engine/: test_stop_strings.py
tests/entrypoints/: test_llm_generate_multiple_loras.py  test_openai_server.py
tests/kernels/: test_attention.py  test_attention_selector.py  test_blocksparse_attention.py  test_cache.py  test_cutlass.py  test_flash_attn.py  test_flashinfer.py  test_marlin_gemm.py  test_moe.py  test_pos_encoding.py
tests/lora/: conftest.py  test_baichuan.py  test_chatglm3.py  test_gemma.py  test_layer_variation.py  test_layers.py  test_llama.py  test_long_context.py  test_lora_checkpoints.py  test_lora_manager.py  test_mixtral.py  test_phi.py  test_punica.py  test_quant_model.py
tools/: gencert_ray.sh
vllm/: config.py  envs.py  sampling_params.py  sequence.py  utils.py  version.py
(+149 files in other folders)
